Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1996

Editor does not obey default encoding

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.0
    • All Other Issues
    • None
    • 7f0ab1a925850963371b86e9a6482a2ac9c45591

    Description

      Set UTF8 as default encoding in Options. Then open some file and check active encoding in Editor. You will see that active encoding is System, not UTF8. This worked properly in previous versions!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mae mae
            tiansen Tiansen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes